# nwn2-ee-save-editor

./: .cspell.json  .gitignore  API_ENDPOINTS.md  README.md  THIRD_PARTY_LICENSES.md  package-lock.json  package.json  parse_playerinfo.py  test_skills_api_response.md  test_vital_stats_fix.js
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yml  test-build.yml
backend/: .env.example  .flake8  build_fastapi_sidecar.py  dev_log_viewer.py  fastapi_server.py  pytest.ini  requirements-production.txt  requirements.txt  requirements_fastapi.txt  test_class_manager_integration.py  test_save_manager.py  test_skill_changes.py  verify_feats.py
backend/api/: character_creation_views.py  character_export_views.py  character_manager_utils.py  debug_middleware.py  decorators.py  middleware.py  savegame_views.py  serializers.py  system_views.py  urls.py
backend/character/: __init__.py  admin.py  character_creation_service.py  character_manager.py  class_change_service.py  custom_content.py  events.py  export_service.py  factory.py  gff_direct_wrapper.py  in_memory_save_manager.py  manager_registry.py  models.py  services.py  session_registry.py  validators.py  xp_utils.py
backend/companion/: admin.py  companion_manager.py  models.py  serializers.py  services.py
backend/config/: __init__.py  logging_config.py  nwn2_settings.py  settings.py  urls.py
backend/fastapi_core/: __init__.py  character_info.py  exceptions.py  session_registry.py  shared_services.py
backend/fastapi_models/: __init__.py  ability_models.py  character_models.py  class_models.py  combat_models.py  content_models.py  feat_models.py  gamedata_models.py  inventory_models.py  levelup_models.py  race_models.py  save_models.py  savegame_models.py  shared_models.py  skill_models.py  spell_models.py
backend/fastapi_routers/: __init__.py  abilities.py  alignment.py  character_creation.py  classes.py  combat.py  content.py  data.py  dependencies.py  feats.py  file_browser.py  gamedata.py  inventory.py  race.py  savegame.py  saves.py  session.py  skills.py  spells.py  state.py  system.py  utils.py
backend/gamedata/: __init__.py  apps.py  hot_reload.py  loader.py  middleware.py  models.py  serializers.py  urls.py
backend/parsers/: __init__.py  cache_helper.py  cache_integration.py  erf.py  gff.py  gff_streaming.py  gff_validator.py  parallel_gff.py  python_directory_walker.py  python_resource_scanner.py  python_zip_indexer.py  resource_manager.py  rust_adapter.py  savegame_handler.py  xml_parser.py
backend/parsers/rust_erf_parser/: Cargo.toml
backend/parsers/rust_erf_parser/benches/: erf_benchmark.rs
backend/parsers/rust_erf_parser/src/: error.rs  lib.rs  parser.rs  python.rs
backend/parsers/rust_icon_cache/: Cargo.toml  README.md  pyproject.toml
backend/parsers/rust_icon_cache/src/: cache.rs  config.rs  discovery.rs  error.rs  index.rs  lib.rs  persistence.rs  processing.rs  python.rs  types.rs
backend/parsers/rust_tda_parser/: Cargo.toml
backend/parsers/rust_tda_parser/benches/: parser_benchmark.rs  tokenizer_benchmark.rs
backend/parsers/rust_tda_parser/src/: lib.rs  parser.rs  python.rs  tokenizer.rs  types.rs
backend/parsers/rust_xml_parser/: Cargo.toml
backend/parsers/rust_xml_parser/src/: lib.rs  parser.rs  python.rs
backend/rust/: Cargo.toml  pyproject.toml
backend/rust/src/: error.rs  lib.rs  prelude.rs  types.rs
backend/rust/src/parsers/: mod.rs
backend/rust/src/parsers/erf/: mod.rs  parser.rs  python.rs  types.rs
backend/rust/src/parsers/gff/: error.rs  mod.rs  parser.rs  python.rs  types.rs  writer.rs
backend/rust/src/parsers/tda/: error.rs  mod.rs  parser.rs  python.rs  tokenizer.rs  types.rs
backend/rust/src/parsers/tlk/: error.rs  mod.rs  parser.rs  python.rs  types.rs
backend/rust/src/parsers/xml/: mod.rs  parser.rs  python.rs
backend/rust/src/services/: mod.rs
backend/rust/src/services/icon_cache/: cache.rs  config.rs  discovery.rs  error.rs  index.rs  mod.rs  persistence.rs  processing.rs  python.rs  types.rs
backend/rust/src/utils/: directory_walker.rs  path_discovery.rs  precompiled_cache.rs  prerequisite_graph.rs  resource_scanner.rs  zip_content_reader.rs  zip_indexer.rs
backend/rust_extensions/: Cargo.toml  README.md  pyproject.toml
backend/rust_extensions/python/nwn2_rust_extensions/: __init__.py  nwn2_rust_wrapper.py
backend/rust_extensions/src/: directory_walker.rs  lib.rs  path_discovery.rs  precompiled_cache.rs  prerequisite_graph.rs  resource_scanner.rs  zip_content_reader.rs  zip_indexer.rs
backend/services/: __init__.py  cache_helper.py  cache_integration.py  dialogue_mapping_service.py  playerinfo_service.py  resource_manager.py  rust_adapter.py  savegame_handler.py
backend/tests/: benchmark_parser.py  test_pagination_structure.py  test_realtime_class_changes.py  test_savegame_batch_read.py
backend/utils/: import_preloader.py  paths.py  performance_profiler.py
frontend/: eslint.config.mjs  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/i18n/: en.json
frontend/src-tauri/: Cargo.toml  backend-fastapi  backend-fastapi.bat  tauri.conf.json
i18n/: de.json  en.json  es.json  fr.json  pl.json  ru.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: events.rs  file_operations.rs  lib.rs
src-tauri/tests/: appearance_anim_routing.rs  debugging.rs
src/components/: blueprint.css  dummy-data.ts
src/contexts/: CharacterContext.tsx
src/hooks/: useAbilityScores.ts  useClassesLevel.ts  useErrorHandler.ts  useIcon.ts  usePathsChangedEvent.ts  useQuestTransitions.ts  useTlkResolver.ts  useUpdateCheck.ts
src/lib/: bindings.ts
src/services/: characterApi.ts  gameStateApi.ts  inventoryApi.ts
src/utils/: classUtils.ts
toolset-bridge/: ArgParser.cs  AssemblyResolver.cs  Errors.cs  FunctorClassifier.cs  GuiStubPatches.cs  IsExternalInit.cs  Logging.cs  Program.cs  Timing.cs  ToolsetBridge.csproj
toolset-bridge/Adapters/: ConversationAdapter.cs  FactionAdapter.cs  JournalAdapter.cs  ModuleVariableAdapter.cs  ToolsetLoader.cs
(+1491 files in other folders)
