[package]
name = "nwn2_rust"
version = "0.1.0"
edition = "2024"

[lib]
name = "nwn2_rust"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module", "abi3-py310"] }
pyo3-async-runtimes = { version = "0.27", features = ["tokio-runtime"] }
pythonize = "0.27"

serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
rmp-serde = "1.3"
bincode = { version = "2.0", features = ["serde"] }

thiserror = "2.0"
anyhow = "1.0"

log = "0.4"
env_logger = "0.11"

tokio = { version = "1.41", features = ["rt-multi-thread", "sync", "time", "fs", "io-util"] }
rayon = "1.10"
num_cpus = "1.16"
futures-util = "0.3"

dashmap = "6.1"
parking_lot = "0.12"
crossbeam-channel = "0.5"

indexmap = { version = "2.6", features = ["serde"] }
smallvec = { version = "1.13", features = ["serde"] }
ahash = "0.8"
lru = "0.16"

lasso = { version = "0.7", features = ["multi-threaded", "serialize"] }

memmap2 = "0.9"

quick-xml = { version = "0.38", features = ["serialize"] }
byteorder = "1.5"
encoding_rs = "0.8"
regex = "1.11"
chrono = { version = "0.4", features = ["serde"] }
lexical = "7.0"

flate2 = "1.0"
zip = "6.0"

sha2 = "0.10"
crc32fast = "1.4"

walkdir = "2.5"
dirs = "6.0"
uuid = { version = "1.11", features = ["v4"] }
bstr = "1.10"

image = { version = "0.25", default-features = false, features = ["png", "tga", "webp"] }
ddsfile = "0.5"
texpresso = "2.0"
image_dds = "0.7"
serde_bytes = "0.11.19"

[features]
default = ["python-bindings"]
python-bindings = []

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
tempfile = "3.14"
