[package]
name = "nwn2_rust_extensions"
version = "0.1.0"
edition = "2021"
description = "Rust performance extensions for NWN2 Save Editor"
authors = ["NWN2 Save Editor"]

[lib]
name = "nwn2_rust_extensions"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"] }
walkdir = "2.4"
zip = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.8"
thiserror = "1.0"
anyhow = "1.0"
dirs = "5.0"
tokio = { version = "1.35", features = ["full"] }
moka = { version = "0.12", features = ["sync"] }
lasso = { version = "0.7", features = ["multi-threaded"] }
image = { version = "0.24", features = ["webp", "png", "tga"] }
webp = "0.3"
dashmap = "5.5"
parking_lot = "0.12"
rmp-serde = "1.1"
sha2 = "0.10"

[build-dependencies]
pyo3-build-config = "0.20"

[profile.release]
# Optimize for performance
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1  # Some optimization for development builds