[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "nwn2-rust-extensions"
version = "1.0.1"
description = "Rust performance extensions for NWN2 Save Editor"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Rust",
]

[tool.maturin]
# Build as a pure rust extension (not mixed with Python)
module-name = "nwn2_rust_extensions"
features = ["pyo3/extension-module"]
python-source = "python"
strip = true