[package]
name = "rust_erf_parser"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_erf_parser"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "multiple-pymethods"] }
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.3"
thiserror = "2.0"
flate2 = "1.0"
rayon = "1.10"
memmap2 = "0.9"
ahash = "0.8"
string-interner = "0.18"
byteorder = "1.5"
encoding_rs = "0.8"
once_cell = "1.20"
indexmap = { version = "2.7", features = ["serde"] }

# Optional SIMD optimizations
wide = { version = "0.7", optional = true }

[dev-dependencies]
criterion = "0.5"
tempfile = "3.14"
proptest = "1.6"

[features]
default = []
simd = ["wide"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.bench]
inherits = "release"

[[bench]]
name = "erf_benchmark"
harness = false