[package]
name = "rust_xml_parser"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_xml_parser"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module", "multiple-pymethods"] }
quick-xml = { version = "0.38", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
regex = "1.12"
chrono = "0.4"
log = "0.4"
env_logger = "0.11"
lazy_static = "1.5"
pythonize = "0.23"
